--- a/css/styles.css
+++ b/css/styles.css
@@ -610,15 +610,18 @@ color: #FFF;
  }
 
  .modal {
-     width: 517px;
-     min-height: 794px;
-     border-radius: 15px;
+     width:408 px;
+     min-height: 584px;
      background-color: #fafafa;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
-     padding: 40px;
+     padding-top: 72px;
+     padding-left: 24px;
+     padding-bottom: 24px;
+     padding-right: 24px;
+     border-radius: 4px;
  }
 
  .modal-btn {
@@ -627,14 +630,23 @@ color: #FFF;
      position: absolute;
      top: 24px;
      right: 24px;
-     width: 28px;
-     height: 28px;
+     width: 24px;
+     height: 24px;
      padding: 0;
+     background-color:#E7E9FC;
+     border-radius: 50%;
+    transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
-
+.modal-btn:hover,
+.modal-btn:active,
+.modal-btn:focus{
+    background-color: #404BBF;
+}
  .modal-btn-icon {
-     fill: transparent;
-     stroke: #111111;
+     fill: #2E2F42;
+   
  }
 
  .modal-title {
@@ -643,7 +655,6 @@ color: #FFF;
      margin-bottom: 40px;
     color:  #2E2F42;
         text-align: center;
-        font-family: Roboto;
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
@@ -656,8 +667,8 @@ color: #FFF;
 
  .modal-input {
      width: 100%;
-     height: 68px;
-     border-radius: 13px;
+     height: 40px;
+     border-radius: 4px;
      border: 1px solid rgba(17, 17, 17, 0.25);
      background-color: transparent;
      padding-left: 62px;
@@ -667,13 +678,25 @@ color: #FFF;
      outline: transparent;
      transition: border-color 300ms linear;
  }
+ .modal-input-nane {
+     width: 100%;
+     height: 68px;
+     border-radius: 13px;
+     border:1px solid , #4D5AE5;
+     background-color: transparent;
+     padding-left: 62px;
+     padding-right: 24px;
+     color: teal;
+     font-size: 16px;
+     outline: transparent;
+     transition: border-color 300ms linear;}
 
  .input-wrap:focus-within .modal-input {
-     border-color: #fd9222;
+     border-color: #4D5AE5;
  }
 
  .input-wrap:focus-within .modal-icon {
-     stroke: #fd9222;
+     fill: #4d5ae5;
  }
 
  /* .modal-input:focus {
@@ -706,17 +729,18 @@ color: #FFF;
 
  .modal-label {
      display: block;
-     color: rgba(64, 64, 64, 0.3);
-     font-size: 14px;
+     color: #8E8F99;
      line-height: normal;
-     letter-spacing: -0.02em;
      margin-bottom: 8px;
+    font-size: 12px;
+    font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
  }
 
  .modal-icon {
      position: absolute;
-     fill: transparent;
-     stroke: #404040;
+     fill: #2e2f42;
      left: 24px;
      top: 50%;
      transform: translateY(-50%);
