--- a/css/styles.css
+++ b/css/styles.css
@@ -749,13 +749,16 @@ color: #FFF;
 
  .modal-textarea {
      width: 100%;
-     height: 137px;
-     border-radius: 13px;
+     height: 120px;
+     border-radius: 4px;
      border: 1px solid rgba(17, 17, 17, 0.25);
      background-color: transparent;
-     padding: 22px 24px;
-     color: teal;
-     font-size: 16px;
+     padding: 8px 16px;
+    color: rgba (46, 47, 66, 0.40);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17px;
+        letter-spacing: 0.04em;
      outline: transparent;
      transition: border-color 300ms linear;
      resize: none;
@@ -769,17 +772,18 @@ color: #FFF;
  }
 
  .check-text {
-     color: rgba(64, 64, 64, 0.6);
-     font-size: 14px;
-     line-height: normal;
-     letter-spacing: -0.02em;
+    color: #8E8F99;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04;
      display: flex;
      align-items: center;
      position: relative;
  }
 
  .check-text a {
-     color: #fd9222;
+     color: #4D5AE5;
  }
 
  .check-text-box {
@@ -796,12 +800,72 @@ color: #FFF;
  }
 
  .modal-check:checked+.check-text>.check-text-box {
-     background-color: #fd9222;
+     background-color: #4D5AE5;
      border: none;
      fill: #ffffff;
  }
 
  /* .check-text:before {
+  content: '';
+  width: 40px;
+  height: 22px;
+  border: 1px solid #fd9222;
+  border-radius: 50px;
+  box-shadow: inset 0 0 4px 2px #fd9222;
+  margin-right: 10px;
+}
+
+.check-text::after {
+  content: '';
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  width: 18px;
+  height: 18px;
+  border-radius: 50px;
+  background-color: #ffffff;
+  box-shadow: inset 0 0 4px 2px #c4bbca;
+  margin-right: 10px;
+  transition-duration: 300ms;
+}
+
+.modal-check:checked + .check-text::after {
+  transform: translate(18px);
+} */
+.check-text {
+    color: rgba(64, 64, 64, 0.6);
+    font-size: 14px;
+    line-height: normal;
+    letter-spacing: -0.02em;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.check-text a {
+    color: #4D5AE5;
+}
+
+.check-text-box {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 6px;
+    border: 1px solid rgba(17, 17, 17, 0.14);
+    margin-right: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.modal-check:checked+.check-text>.check-text-box {
+    background-color: #4D5AE5;
+    border: none;
+    fill: #ffffff;
+}
+
+/* .check-text:before {
   content: '';
   width: 40px;
   height: 22px;
