--- a/css/styles.css
+++ b/css/styles.css
@@ -718,8 +718,15 @@ margin-left: 119px;
      background-color: #4D5AE5;
      border: none;
      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
  }
+.modal-form-btn:active,
+.modal-form-btn:hover{
+    background-color:#404BBF ;
+}
 
  .input-wrap {
      position: relative;
