--- a/css/styles.css
+++ b/css/styles.css
@@ -614,8 +614,10 @@ color: #FFF;
         font-size: 12px;
         font-style: normal;
         font-weight: 400;
-        line-height: 2;
+        line-height: 1.5;
         letter-spacing: 0.04em;
+        padding-left: 16px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .footer-form-input::placeholder {
@@ -634,12 +636,14 @@ color: #FFF;
     border-radius: 100px;
     background-color: #fd9222;
     border: none;*/
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #FFF;
-        font-size: 12px;
+        font-size: 16x;
         font-style: normal;
-        font-weight: 400;
-        line-height: 2;
+        font-weight: 500;
+        line-height: 1.5;
         letter-spacing: 0.04em;
         border-radius: 4px;
         text-align: center;
@@ -648,10 +652,11 @@ color: #FFF;
         padding-top: 8px; 
         padding-bottom: 8px;
         padding-right: 24px;
-        width: 165px;
+        min-width: 165px;
         height: 40px;
         margin-right: 16px;
-        
+        cursor: pointer;
+
       
 }
 .footer-form-btn-icon{
