--- a/css/styles.css
+++ b/css/styles.css
@@ -666,11 +666,11 @@ color: #FFF;
      left: 0;
      width: 100%;
      height: 100%;
-     background-color: rgba(17, 17, 17, 0.657);
+    background-color: rgba(46, 47, 66, 0.4);
      opacity: 0;
      visibility: hidden;
      pointer-events: none;
-     transition: opacity 300ms linear, visibility 300ms linear;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .is-open {
@@ -680,18 +680,20 @@ color: #FFF;
  }
 
  .modal {
-     width:408 px;
+    width: 408px;
      min-height: 584px;
-     background-color: #fafafa;
+    background: #fcfcfc;
      position: absolute;
      top: 50%;
      left: 50%;
+    box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
      transform: translate(-50%, -50%);
      padding-top: 72px;
      padding-left: 24px;
      padding-bottom: 24px;
      padding-right: 24px;
      border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .modal-btn {
