--- a/css/styles.css
+++ b/css/styles.css
@@ -686,7 +686,7 @@ color: #FFF;
      position: absolute;
      top: 50%;
      left: 50%;
-    box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
      transform: translate(-50%, -50%);
      padding-top: 72px;
      padding-left: 24px;
