--- a/css/styles.css
+++ b/css/styles.css
@@ -697,8 +697,12 @@ color: #FFF;
  }
 
  .modal-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
      background-color: transparent;
-     border: none;
+    cursor: pointer;
      position: absolute;
      top: 24px;
      right: 24px;
@@ -707,9 +711,7 @@ color: #FFF;
      padding: 0;
      background-color:#E7E9FC;
      border-radius: 50%;
-    transition-property: background-color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 .modal-btn:hover,
 .modal-btn:active,
