--- a/css/styles.css
+++ b/css/styles.css
@@ -716,12 +716,18 @@ color: #FFF;
 .modal-btn:hover,
 .modal-btn:active,
 .modal-btn:focus{
+    border: none;
     background-color: #404BBF;
 }
  .modal-btn-icon {
      fill: #2E2F42;
-   
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+.modal-btn-icon:hover,
+.modal-btn-icon:active,
+.modal-btn-icon:focus {
+    fill: #ffffff
+}
 
  .modal-title {
      text-align: left;
