--- a/css/styles.css
+++ b/css/styles.css
@@ -726,13 +726,13 @@ color: #FFF;
 .modal-btn-icon:hover,
 .modal-btn-icon:active,
 .modal-btn-icon:focus {
-    fill: #ffffff
+    fill: #ffffff;
 }
 
  .modal-title {
      text-align: left;
      max-width: 360px;
-     margin-bottom: 40px;
+     margin-bottom: 16px;
     color:  #2E2F42;
         text-align: center;
         font-size: 16px;
