--- a/css/styles.css
+++ b/css/styles.css
@@ -742,9 +742,11 @@ color: #FFF;
  }
 
  .modal-field {
-     margin-bottom: 18px;
+     margin-bottom: 8px;
  }
-
+.modal-label{
+    margin-bottom: 4px;
+}
  .modal-input {
      width: 100%;
      height: 40px;
