--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,7 @@ color: #FFF;
     border: none;
     background-color: #404BBF;
 }
+
  .modal-btn-icon {
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -751,14 +752,14 @@ color: #FFF;
      width: 100%;
      height: 40px;
      border-radius: 4px;
-     border: 1px solid rgba(17, 17, 17, 0.25);
+    border: 1px solid rgba(46, 47, 66, 0.4);
      background-color: transparent;
-     padding-left: 62px;
+     padding-left: 38px;
      padding-right: 24px;
      color: teal;
      font-size: 16px;
      outline: transparent;
-     transition: border-color 300ms linear;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .modal-input-nane {
      width: 100%;
@@ -836,10 +837,10 @@ margin-left: 119px;
  .modal-icon {
      position: absolute;
      fill: #2e2f42;
-     left: 24px;
+     left: 16px;
      top: 50%;
      transform: translateY(-50%);
-     transition: stroke 300ms linear;
+    transition:fill  250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .modal-textarea {
