--- a/css/styles.css
+++ b/css/styles.css
@@ -850,13 +850,14 @@ margin-left: 119px;
      border: 1px solid rgba(17, 17, 17, 0.25);
      background-color: transparent;
      padding: 8px 16px;
-    color: rgba (46, 47, 66, 0.40);
+    color: rgba(46, 47, 66, 0.4);
         font-size: 12px;
         font-weight: 400;
-        line-height: 1.17px;
+        line-height: 1.17;
         letter-spacing: 0.04em;
+        border: 1px solid rgba(46, 47, 66, 0.4);
      outline: transparent;
-     transition: border-color 300ms linear;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      resize: none;
  }
 
