--- a/css/styles.css
+++ b/css/styles.css
@@ -860,20 +860,25 @@ margin-left: 119px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      resize: none;
  }
-
+.modal-textarea:focus {
+border-color: #4D5AE5;
+}
  .modal-textarea::placeholder {
      color: rgba(64, 64, 64, 0.3);
      font-size: 18px;
      line-height: normal;
      letter-spacing: -0.02em;
  }
-
+.modal-check-container{
+    margin-bottom: 24px;
+}
  .check-text {
-    color: #8E8F99;
+    color: #8e8f99;
+    font-size: 12px;
     font-style: normal;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04;
      display: flex;
      align-items: center;
      position: relative;
