--- a/css/styles.css
+++ b/css/styles.css
@@ -889,24 +889,24 @@ border-color: #4D5AE5;
  }
 
  .check-text-box {
-     display: block;
+    display: inline-flex;
      width: 16px;
      height: 16px;
-     border-radius: 6px;
-     border: 1px solid rgba(17, 17, 17, 0.14);
      margin-right: 8px;
-     display: flex;
      align-items: center;
      justify-content: center;
      fill: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 .check-text-box-link{
     margin-left: 6px;
 }
  .modal-check:checked +.check-text > .check-text-box {
-     background-color: #4D5AE5;
+     background-color: #404bbf;;
      border: none;
-   fill: #ffffff;
+   fill: #F4F4FD;
  }
  /* .check-text:before {
   content: '';
