--- a/css/styles.css
+++ b/css/styles.css
@@ -877,13 +877,12 @@ border-color: #4D5AE5;
  .check-text {
     color: #8e8f99;
     font-size: 12px;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.04;
-     display: flex;
-     align-items: center;
-     position: relative;
+    display: flex;
+    align-items: center;
+    position: relative;
  }
 
  .check-text a {
@@ -938,14 +937,14 @@ border-color: #4D5AE5;
   transform: translate(18px);
 } */
 /*======================================*/
-.check-text {
+/*.check-text {
     color: rgba(64, 64, 64, 0.6);
     font-size: 14px;
     line-height: normal;
     letter-spacing: -0.02em;
     display: flex;
     align-items: center;
-    position: relative;
+    position: relative;*/
 }
 
 .check-text a {
