--- a/css/styles.css
+++ b/css/styles.css
@@ -971,10 +971,10 @@ border-color: #4D5AE5;
     fill: transparent;
 }*/
 
-.modal-check:checked+.check-text>.check-text-box {
+/*.modal-check:checked+.check-text>.check-text-box {
     background-color: #4D5AE5;
     border: none;
-    fill: #ffffff;
+    fill: #ffffff;*/
 }
 /*===================================*/
  /*.check-text:before {
