--- a/css/styles.css
+++ b/css/styles.css
@@ -900,12 +900,12 @@ border-color: #4D5AE5;
      width: 16px;
      height: 16px;
      margin-right: 8px;
+    display: inline-flex;
      align-items: center;
      justify-content: center;
      fill: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    display: inline-flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 .check-text-box-link{
@@ -916,47 +916,8 @@ border-color: #4D5AE5;
      border: none;
    fill: #F4F4FD;
  }
- /* .check-text:before {
-  content: '';
-  width: 40px;
-  height: 22px;
-  border: 1px solid #fd9222;
-  border-radius: 50px;
-  box-shadow: inset 0 0 4px 2px #fd9222;
-  margin-right: 10px;
-}
+ 
 
-.check-text::after {
-  content: '';
-  position: absolute;
-  left: 2px;
-  top: 2px;
-  width: 18px;
-  height: 18px;
-  border-radius: 50px;
-  background-color: #ffffff;
-  box-shadow: inset 0 0 4px 2px #c4bbca;
-  margin-right: 10px;
-  transition-duration: 300ms;
-}
-
-.modal-check:checked + .check-text::after {
-  transform: translate(18px);
-} */
-/*======================================*/
-/*.check-text {
-    color: rgba(64, 64, 64, 0.6);
-    font-size: 14px;
-    line-height: normal;
-    letter-spacing: -0.02em;
-    display: flex;
-    align-items: center;
-    position: relative;*/
-}
-
-.check-text a {
-    color: #4D5AE5;
-}
 
 /*.check-text-box {
     display: block;
@@ -974,8 +935,8 @@ border-color: #4D5AE5;
 /*.modal-check:checked+.check-text>.check-text-box {
     background-color: #4D5AE5;
     border: none;
-    fill: #ffffff;*/
-}
+    fill: #ffffff;}*/
+
 /*===================================*/
  /*.check-text:before {
   content: '';
