--- a/css/styles.css
+++ b/css/styles.css
@@ -867,7 +867,9 @@ border-color: #4D5AE5;
      line-height: normal;
      letter-spacing: -0.02em;
  }
-
+.modal-check-container{
+    margin-bottom: 16px;
+}
  .check-text {
     color: #8e8f99;
     font-size: 12px;
