--- a/css/styles.css
+++ b/css/styles.css
@@ -701,7 +701,6 @@ color: #FFF;
     align-items: center;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
-     background-color: transparent;
     cursor: pointer;
      position: absolute;
      top: 24px;
@@ -709,7 +708,7 @@ color: #FFF;
      width: 24px;
      height: 24px;
      padding: 0;
-     background-color:#E7E9FC;
+     background-color:#e7e9fc;;
      border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
