--- a/css/styles.css
+++ b/css/styles.css
@@ -712,9 +712,9 @@ color: #FFF;
      border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn,.modal-btn-icon:hover,
-.modal-btn,.modal-btn-icon:active,
-.modal-btn,.modal-btn-icon:focus{
+.modal-btn:hover,
+.modal-btn:active,
+.modal-btn .modal-btn-icon:focus{
     border: none;
     background-color: #404bbf;;
     fill: #ffffff;
