--- a/css/styles.css
+++ b/css/styles.css
@@ -714,17 +714,17 @@ color: #FFF;
  }
 .modal-btn:hover,
 .modal-btn:active,
-.modal-btn .modal-btn-icon:focus{
+.modal-btn :focus{
     border: none;
     background-color: #404bbf;;
-    fill: #ffffff;
+   
 }
 
  .modal-btn-icon {
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-/*.modal-btn-icon:hover,
+.modal-btn:hover >.modal-btn-icon:hover,
 .modal-btn-icon:active,
 .modal-btn-icon:focus {
     fill:transparent;
