--- a/css/styles.css
+++ b/css/styles.css
@@ -724,12 +724,12 @@ color: #FFF;
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn:hover >.modal-btn-icon:hover,
+.modal-btn-icon:hover,
 .modal-btn-icon:active,
 .modal-btn-icon:focus {
     fill:transparent;
     fill: #ffffff;
-}*/
+}
 
  .modal-title {
      text-align: left;
