--- a/css/styles.css
+++ b/css/styles.css
@@ -712,24 +712,24 @@ color: #FFF;
      border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn:hover,
+.modal-btn:hover + .modal-btn-icon,
 .modal-btn:active,
-.modal-btn:focus{
+.modal-btn:focus +.modal-btn-icon{
     border: none;
     background-color: #404bbf;;
-   
+    fill: #ffffff;
 }
 
  .modal-btn-icon {
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn-icon:hover,
+/*.modal-btn-icon:hover,
 .modal-btn-icon:active,
 .modal-btn-icon:focus {
     fill:transparent;
     fill: #ffffff;
-}
+}*/
 
  .modal-title {
      text-align: left;
