--- a/css/styles.css
+++ b/css/styles.css
@@ -712,9 +712,9 @@ color: #FFF;
      border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn:hover + .modal-btn-icon,
+.modal-btn:hover ,
 .modal-btn:active,
-.modal-btn:focus +.modal-btn-icon{
+.modal-btn:focus {
     border: none;
     background-color: #404bbf;;
     fill: #ffffff;
@@ -723,6 +723,10 @@ color: #FFF;
  .modal-btn-icon {
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+.modal-btn-icon:hover{
+   
+        fill: #ffffff;
  }
 /*.modal-btn-icon:hover,
 .modal-btn-icon:active,
