--- a/css/styles.css
+++ b/css/styles.css
@@ -792,13 +792,7 @@ color: #FFF;
      fill: #4d5ae5;
  }
 
- /* .modal-input:focus {
-  border-color: #fd9222;
-}
-
-.modal-input:focus + .modal-icon {
-  stroke: #fd9222;
-} */
+ 
 
  .modal-input::placeholder {
      color: #6a5c75;
@@ -898,7 +892,6 @@ border-color: #4D5AE5;
      width: 16px;
      height: 16px;
      margin-right: 8px;
-     fill: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -906,57 +899,16 @@ border-color: #4D5AE5;
 .check-text-box-link{
     margin-left: 6px;
 }
+.check-text-icon{
+    fill: #F4F4FD;
+}
  .modal-check:checked +.check-text > .check-text-box {
      background-color: #404bbf;
      border: none;
    fill: #F4F4FD;
  }
- 
+ .modal-check:checked+.check-text>.check-text-box-icon{
+    fill: #F4F4FD;
+ }
 
 
-/*.check-text-box {
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-radius: 6px;
-    border: 1px solid rgba(17, 17, 17, 0.14);
-    margin-right: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-}*/
-
-/*.modal-check:checked+.check-text>.check-text-box {
-    background-color: #4D5AE5;
-    border: none;
-    fill: #ffffff;}*/
-
-/*===================================*/
- /*.check-text:before {
-  content: '';
-  width: 40px;
-  height: 22px;
-  border: 1px solid #fd9222;
-  border-radius: 50px;
-  box-shadow: inset 0 0 4px 2px #fd9222;
-  margin-right: 10px;
-}
-
-.check-text::after {
-  content: '';
-  position: absolute;
-  left: 2px;
-  top: 2px;
-  width: 18px;
-  height: 18px;
-  border-radius: 50px;
-  background-color: #ffffff;
-  box-shadow: inset 0 0 4px 2px #c4bbca;
-  margin-right: 10px;
-  transition-duration: 300ms;
-}
-
-.modal-check:checked + .check-text::after {
-  transform: translate(18px);
-} 
