--- a/css/styles.css
+++ b/css/styles.css
@@ -712,7 +712,7 @@ color: #FFF;
      border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn:hover ,
+.modal-btn:hover,
 .modal-btn:active,
 .modal-btn:focus {
     border: none;
@@ -724,9 +724,11 @@ color: #FFF;
      fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
-.modal-btn-icon:hover{
-   
-        fill: #ffffff;
+.modal-btn:hover > .modal-btn-icon{
+ fill: #ffffff;
+ }
+ .modal-btn:focus >.modal-btn-icon {
+     fill: #ffffff;
  }
 /*.modal-btn-icon:hover,
 .modal-btn-icon:active,
@@ -889,6 +891,7 @@ border-color: #4D5AE5;
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    fill: transparent;
      width: 16px;
      height: 16px;
      margin-right: 8px;
