--- a/css/styles.css
+++ b/css/styles.css
@@ -864,6 +864,7 @@ border-color: #4D5AE5;
 .modal-check-container{
     margin-bottom: 16px;
 }
+
  .modal-field-check{
     margin-bottom: 24px;
  }
@@ -896,6 +897,7 @@ border-color: #4D5AE5;
  }
 .check-text-box-link{
     margin-left: 6px;
+    text-decoration: underline;
 }
 .check-text-icon{
     fill: #F4F4FD;
